使用flex实现定像素布局

--- a/demo2.html
+++ b/demo2.html
@@ -103,7 +103,7 @@
 				<div class="main">
 					<p>main</p>
 					<p>main在容器inner-main中，所以填满也只有inner-main的宽度(也就是和ads一样宽)，设置其margin-left为
-					 sidebar的宽度的负值，就可以填补sidebar下面的空白区，达到效果</p>
+					 sidebar的宽度的负值，自身自适应宽度，就可以填补sidebar下面的空白区，达到效果</p>
 				</div>
 			</div>		
 
