使用浮动实现百分比布局

--- a/demo1.html
+++ b/demo1.html
@@ -30,7 +30,7 @@
 			overflow: hidden;
 			width: 80%;
 			height: 100px;
-			background: #F6A428;
+			background: orange;
 		}
 		.ads {
 			float: left;
@@ -68,8 +68,7 @@
 		<div class="nav"><p>nav</p></div>
 		<div class="conve"><p>conve</p></div>
 		<div class="ads"><p>ads</p></div>
-		<div class="main"><p>main</p></div>
-		
+		<div class="main"><p>main</p></div>		
 	</div>	
 	<div class="footer"><p>footer</p></div>
 </body>
